--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
+        uses: actions/setup-node@v2.4.1
+      - name: Check Node Version
+        run: node -v
       - name: Install dependencies
         run: npm install 
       - name: Build app
