--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "@semantic-release/github",
     "@semantic-release/npm",
     "@semantic-release/git"
-  ]
+  ],
+  "release": {
+    "branches": ["master"]
+  }
 }
