--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cherik-npm",
-  "version": "1.1.0",
+  "version": "1.4.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -72,5 +72,9 @@
   ],
   "release": {
     "branches": ["main"]
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js"
 }
