--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "cherik-npm",
-  "version": "1.4.0",
+  "name": "cherik-storybook-test",
+  "version": "0.2.15",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.27",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "typescript": "^4.4.3",
-    "web-vitals": "^1.1.2"
+    "@types/styled-components": "^5.1.14"
+  },
+  "peerDependencies" : {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "tsc",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
+    "extends": "react-app",
     "overrides": [
       {
         "files": [
@@ -53,15 +43,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@storybook/addon-actions": "^6.3.9",
-    "@storybook/addon-essentials": "^6.3.9",
-    "@storybook/addon-links": "^6.3.9",
-    "@storybook/node-logger": "^6.3.9",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.9",
-    "semantic-release": "^18.0.0"
-  },
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
@@ -70,11 +51,21 @@
     "@semantic-release/npm",
     "@semantic-release/git"
   ],
-  "release": {
-    "branches": ["main"]
-  },
-  "files": [
-    "dist"
-  ],
-  "main": "dist/index.js"
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.3.9",
+    "@storybook/addon-essentials": "^6.3.9",
+    "@storybook/addon-links": "^6.3.9",
+    "@storybook/node-logger": "^6.3.9",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.9",
+    "semantic-release": "^18.0.0",
+    "typescript": "^4.1.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
+  }
 }
