--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,18 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "noFallthroughCasesInSwitch": true
+    "noEmit": false,
+    "jsx": "react",
+    "declaration": true,
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "src/stories/*.stories.tsx"
   ]
 }
