--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0"
+  },
+  "release": {
+    "branches": ["main"]
   }
 }
